--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   flex-direction: column;
   min-height: 100vh;
   position: relative;
+  background-color: #fafaf2;
 }
 button {
   border-style: none;
@@ -25,4 +26,3 @@ a {
   text-decoration: none;
   color: unset;
 }
-
