--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,6 +12,8 @@
   background-color: #fff;
 }
 .header__container {
+  max-width: 1440px;
+  margin: 0 auto;
   padding: 10px 120px;
   border-bottom: 2px solid #e8e8e8;
   min-height: 95px;
@@ -85,6 +87,72 @@
   cursor: pointer;
   border-radius: 10px;
 }
+.header__catalog span {
+	margin-right: 10px;
+}
+/* ----------------------------------------- */
+
+  .header__catalog--icon {
+    z-index: 5;
+    position: relative;
+    width: 15px;
+    height: 11px;
+    cursor: pointer;
+    display: block;
+  }
+  .header__catalog--icon span,
+  .header__catalog--icon::before,
+  .header__catalog--icon::after {
+    left: 0;
+    position: absolute;
+    height: 11%;
+    width: 100%;
+    transition: all 0.3s linear;
+    background-color: rgb(255, 255, 255);
+  }
+  .header__catalog--icon::before,
+  .header__catalog--icon::after {
+    content: "";
+  }
+  .header__catalog--icon::before {
+    top: 0;
+  }
+  .header__catalog--icon::after {
+    bottom: 0;
+  }
+  .header__catalog--icon span {
+    top: 50%;
+    transform: scale(1) translate(0px, -50%);
+  }
+  .header__catalog--icon._active span {
+    transform: scale(0) translate(0px, -50%);
+  }
+  .header__catalog--icon._active::before {
+    top: 50%;
+    transform: rotate(-45deg) translate(0px, -50%);
+  }
+  .header__catalog--icon._active::after {
+    bottom: 50%;
+    transform: rotate(45deg) translate(0px, 50%);
+  }
+
+
+
+/* -------------------------------------------- */
+
+
+.header__catalog:hover {
+  background: linear-gradient(
+    90deg,
+    rgb(218, 38, 38) 0%,
+    rgb(139, 25, 25) 61%,
+    rgb(131, 17, 47) 100%
+  );
+  transition: all 0.3s linear;
+}
+.header__catalog:active {
+  border: 3px solid rgb(139, 25, 25);
+}
 .header__right {
   display: flex;
   justify-content: space-between;
@@ -100,6 +168,17 @@
   cursor: pointer;
 }
 .header__assets {
+}
+.header__assets-top div:hover {
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 72, 72, 1) 0%,
+    rgba(170, 39, 39, 1) 100%
+  );
+  transition: all 0.3s linear;
 }
 .header__assets-top {
   display: flex;
@@ -123,12 +202,18 @@
 }
 .header__assets-bottom {
   margin-top: 10px;
-}
-.header__assets-bottom input {
   width: 100%;
   height: 35px;
+  box-shadow: inset 0px 0px 4px rgb(0 0 0 / 25%);
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  padding: 2px 6px 2px 3px;
   border-radius: 10px;
-  box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
+}
+.header__assets-bottom input {
+  height: 90%;
+  width: 100%;
 }
 .header__search {
   cursor: pointer;
@@ -154,6 +239,13 @@
 
 /* *********************************  MEDIA QUERY  ************************************* */
 
+/* *********************************  max-width: 1400px  *************************************** */
+@media (max-width: 1400px) {
+  .header__container {
+    padding: 10px 50px;
+  }
+}
+
 /* *********************************  max-width: 768px  *************************************** */
 .header__content.mobile {
   display: none;
@@ -168,7 +260,7 @@
   align-items: center;
   justify-content: center;
 }
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .header__content.computer {
     display: none;
   }
@@ -209,6 +301,9 @@
     width: 100%;
     transition: all 0.3s linear;
     background-color: #000;
+  }
+  .header__mobile--button::after  {
+	  height: 5%;
   }
   .header__mobile--button::before,
   .header__mobile--button::after {
@@ -312,6 +407,7 @@
   .header__container {
     padding: 10px 30px;
   }
+
   .header__right {
     width: 49%;
   }
@@ -320,6 +416,42 @@
   }
   .header__left ul li {
     font-size: 12px;
-    margin-right: 10px;
+    margin-right: 7px;
+  }
+}
+
+/* *********************************  max-width: 768px  *************************************** */
+
+@media (max-width: 768px) {
+  .header__container {
+    padding: 10px 20px;
+  }
+}
+
+/* *********************************  max-width: 575px  *************************************** */
+
+@media (max-width: 575px) {
+  .header__container {
+    padding: 10px 20px;
+  }
+  .header__mobile--middle {
+    width: 150px;
+  }
+  .header__catalog {
+    width: 100%;
+  }
+}
+
+/* *********************************  max-width: 450px  *************************************** */
+
+@media (max-width: 450px) {
+  .header__logo {
+    font-size: 30px;
+  }
+  .header__mobile--middle {
+    width: 120px;
+  }
+  .header__catalog {
+    width: 100%;
   }
 }
