--- a/src/components/Main/Banner/Banner.css
+++ b/src/components/Main/Banner/Banner.css
@@ -5,7 +5,9 @@
   /* height: 100vh; */
 }
 .banner__container {
-  padding: 0 120px;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 10px 120px;
   filter: drop-shadow(0px 10px 16px rgba(0, 0, 0, 0.05));
 }
 .banner__content {
@@ -15,8 +17,9 @@
   margin: 150px 0 30px 0;
 }
 .banner__left {
+  /* max-width: 790px; */
   width: 65%;
-  height: 355px;
+  height: 375px;
   /* background: url("../../../assets/images/new_design/banner_main.png"); */
   /* background-repeat: no-repeat;
   background-size: contain; */
@@ -31,19 +34,26 @@
   color: #ff0000;
 } */
 .banner__left--img {
-  width: 100%;
-  min-height: 355px;
+  /* max-width: 790px;
+  width: 65%;
+   */
+  height: 375px;
   position: relative;
 }
 .banner__left--img img {
-  position: absolute;
+  /* position: absolute; */
+  width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 .banner__btn {
-  height: 100%;
-  display: flex;
-  align-items: flex-end;
+  /* height: 100%; */
+  /* display: flex;
+  align-items: flex-end; */
   padding: 20px;
+  position: absolute;
+  bottom: 10px;
+  left: 20px;
 }
 .banner__btn button {
   padding: 5px 15px;
@@ -52,13 +62,15 @@
   font-size: 14px;
   color: #3f3d56;
   background: #c4c4c4;
-  margin-top: 60px;
+  /* margin-top: 60px; */
   border-radius: 10px;
   z-index: 20;
 }
 
 .banner__right {
-  width: 33%;
+  /* max-width: 380px; */
+  width: 32%;
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -74,9 +86,29 @@
   position: relative;
 }
 .banner__right--img img {
-  position: absolute;
+  /* position: absolute; */
   height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
+.banner__btn--right {
+  padding: 20px;
+  position: absolute;
+  bottom: 5px;
+  left: 10px;
+}
+.banner__btn--right button {
+  padding: 5px 15px;
+  font-family: Geometria;
+  font-weight: 700;
+  font-size: 14px;
+  color: #3f3d56;
+  background: #c4c4c4;
+  /* margin-top: 60px; */
+  border-radius: 10px;
+  z-index: 20;
+}
+
 .banner__right--bottom {
   border-radius: 10px;
   background: url("../../../assets/images/new_design/banner_main.png");
@@ -104,13 +136,123 @@
   height: 15px;
   padding: 2px;
   border: 2px solid #000;
+  margin-bottom: 20px;
 }
 /* ******************************************MEDIA QUERY***************************************************** */
+
+/* *********************************  max-width: 1400px  *************************************** */
+@media (max-width: 1400px) {
+  .banner__container {
+    padding: 10px 50px;
+  }
+}
 
 /* ****************************************** @media max-width:1200px ***************************************************** */
 
 @media (max-width: 1200px) {
   .banner__container {
-    padding: 0 50px;
+    padding: 10px 50px;
+  }
+}
+
+/* *********************************  max-width: 992px  *************************************** */
+
+@media (max-width: 992px) {
+  .banner__container {
+    padding: 10px 30px;
+  }
+  .banner__content {
+    display: block;
+  }
+  .banner__left {
+    width: 100%;
+    height: 300px;
+  }
+  .banner__left--img {
+    width: 100%;
+
+    height: 300px;
+  }
+  .banner__right {
+    flex-direction: row;
+    width: 100%;
+    margin-top: 30px;
+  }
+  .banner__right--img {
+    border-radius: 10px;
+    width: 48%;
+    height: 170px;
+
+    filter: drop-shadow(0px 10px 16px rgba(0, 0, 0, 0.05));
+    position: relative;
+  }
+}
+/* *********************************  max-width: 768px  *************************************** */
+
+@media (max-width: 768px) {
+  .banner__left {
+    width: 90%;
+    height: 200px;
+    margin: 0 auto;
+  }
+  .banner__left--img {
+    width: 100%;
+
+    height: 200px;
+  }
+  .banner__right {
+    flex-direction: row;
+    width: 90%;
+    margin: 30px auto 0;
+    /* margin-top: 30px; */
+  }
+  .banner__right--img {
+    border-radius: 10px;
+    width: 48%;
+    height: 150px;
+
+    filter: drop-shadow(0px 10px 16px rgba(0, 0, 0, 0.05));
+    position: relative;
+  }
+}
+
+/* *********************************  max-width: 575px  *************************************** */
+
+@media (max-width: 575px) {
+  .banner__container {
+    padding: 10px 20px;
+  }
+  .banner__left {
+    width: 100%;
+  }
+  .banner__right {
+    width: 100%;
+  }
+  .banner__left--img {
+    /* height: 150px; */
+  }
+  .banner__btn {
+    bottom: 5px;
+    left: 5px;
+  }
+
+  .banner__btn button {
+    padding: 5px 6px;
+    font-size: 10px;
+  }
+  .banner__btn--right button {
+    padding: 5px 6px;
+    font-size: 10px;
+  }
+  .banner__btn--right {
+    bottom: 5px;
+    left: 5px;
+  }
+}
+
+/* *********************************  max-width: 575px  *************************************** */
+@media (max-width: 450px) {
+  .banner__right--img {
+    height: 100px;
   }
 }
