--- a/src/components/Main/Category/Category.css
+++ b/src/components/Main/Category/Category.css
@@ -8,21 +8,9 @@
   font-family: Geometria;
   font-weight: 500;
 }
-/* .category__content .active {
-  color: transparent;
-  -webkit-background-clip: text;
-  background-clip: text;
-  background-image: linear-gradient(
-    90deg,
-    rgba(255, 72, 72, 1) 0%,
-    rgba(170, 39, 39, 1) 100%
-  );
 
-  font-family: Geometria;
-  font-weight: 700;
-} */
 .category__content ul li {
-	transition: all .3s linear;
+  transition: all 0.3s linear;
 }
 .category__content ul li:hover {
   color: transparent;
@@ -36,7 +24,7 @@
 }
 
 .category__left {
-  width: 25%;
+  width: 26%;
   border-right: 2px solid #e0e0e0;
 }
 .category__left ul li {
@@ -44,7 +32,7 @@
   cursor: pointer;
 }
 .category__middle {
-  width: 25%;
+  width: 26%;
 }
 .category__middle ul li {
   margin-left: 50px;
@@ -52,78 +40,78 @@
   cursor: pointer;
 }
 .category__right {
-  width: 58%;
-}
-.category__right {
+  width: 48%;
   text-align: right;
   padding-right: 30px;
 }
-.category__right img {
-  display: inline-block;
-  width: 350px;
-  height: 300px;
+
+.category__right--img {
+  max-width: 350px;
+  margin-left: auto;
+
   /* margin: 0 auto; */
 }
-
-/* ************************************************************************************ */
-/* .category__container {
-  padding: 0 30px;
-}
-.category__title {
-  max-width: 650px;
-  margin: 30px auto 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.category__title--line {
-  width: 220px;
-  height: 2px;
-  background-color: #777777;
-}
-.category__title h2 {
-  font-size: 36px;
-  font-family: Gilroy;
-  font-weight: 800;
-  color: #ff0000;
-  padding-bottom: 5px;
-}
-.show_click {
-  margin: 15px 0;
-}
-.show_click span {
-  font-size: 15px;
-  font-weight: 900;
-  color: #3e3e3e;
-  cursor:  pointer;
-}
-.category__content {
-  display: flex;
-  justify-content: space-between;
-  font-family: Geometria;
-  font-weight: 700;
-}
-.category__item {
-  width: 200px;
-  height: 130px;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: rgba(0, 0, 0, 0.3);
-  border-radius: 5px;
-  cursor: pointer;
-}
-.category__item img {
-  position: absolute;
+.category__right--img img {
   width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
+  object-fit: cover;
 }
-.category__item p {
-  z-index: 10;
-  text-align: center;
-  color: #ffffff;
-} */
+
+/* *********************************  MEDIA QUERY  ************************************* */
+
+/* *********************************  max-width: 1400px  *************************************** */
+@media (max-width: 1400px) {
+  .catalogModal {
+    padding: 30px 50px;
+  }
+}
+
+/* *********************************  max-width: 1400px  *************************************** */
+@media (max-width: 1200px) {
+  .category__content ul li {
+    margin-left: 10px;
+  }
+
+  .category__left {
+    width: 30%;
+  }
+  .category__middle {
+    width: 30%;
+  }
+  .category__right {
+    width: 40%;
+    padding-right: 0;
+  }
+}
+
+/* *********************************  max-width: 992px  *************************************** */
+@media (max-width: 992px) {
+  .category__right--img {
+    max-width: 200px;
+  }
+}
+
+/* *********************************  max-width: 768px  *************************************** */
+@media (max-width: 768px) {
+  .category__content ul li {
+    font-size: 12px;
+  }
+
+  .category__right--img {
+    max-width: 150px;
+  }
+}
+
+/* *********************************  max-width: 575px  *************************************** */
+@media (max-width: 575px) {
+  .category__right {
+    display: none;
+  }
+    .category__left {
+    width: 45%;
+  }
+  .category__middle {
+    width: 45%;
+  }
+
+
+}
