--- a/src/components/Main/Logo/Logo.css
+++ b/src/components/Main/Logo/Logo.css
@@ -5,7 +5,9 @@
   width: 100%;
 }
 .logo__container {
-  padding: 0 80px;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 120px;
   width: 100%;
 }
 .logo__content {
@@ -17,12 +19,24 @@
   /* width: 150px; */
 }
 .logo__img {
-  display: block;
-  /* width: 120px; */
+  max-width: 170px;
+}
+.logo__img img {
+  width: 100%;
+  object-fit: contain;
 }
 /* SWIPER */
 
 .swiper-slide {
   display: flex;
   justify-content: center;
+}
+
+/* ******************************************MEDIA QUERY***************************************************** */
+
+/* *********************************  max-width: 1400px  *************************************** */
+@media (max-width: 1400px) {
+  .logo__container {
+    padding: 0px 50px;
+  }
 }
