--- a/src/components/Main/News_blog/News_blog.css
+++ b/src/components/Main/News_blog/News_blog.css
@@ -1,5 +1,8 @@
 .news_blog__container {
-  padding: 0 120px 150px;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 120px 120px;
+
   display: flex;
   justify-content: space-between;
 }
@@ -84,4 +87,51 @@
 }
 .news_blog__img img {
   width: 100%;
+}
+
+/* ******************************************MEDIA QUERY***************************************************** */
+
+/* *********************************  max-width: 1400px  *************************************** */
+@media (max-width: 1400px) {
+  .news_blog__container {
+    padding: 10px 50px 120px;
+  }
+}
+
+/* *********************************  max-width: 992px  *************************************** */
+
+@media (max-width: 992px) {
+  .news_blog__container {
+    padding: 10px 30px 80px;
+  }
+}
+
+/* *********************************  max-width: 768px  *************************************** */
+
+@media (max-width: 768px) {
+  .news_blog__container {
+    flex-direction: column;
+  }
+
+  .news_blog__item {
+    width: 90%;
+    margin: 0 auto;
+    /* max-width: 780px; */
+
+    padding: 10px;
+    /* border: 3px solid rgba(63, 61, 86, 0.5); */
+    /* border-radius: 10px; */
+    font-family: Geometria;
+    font-weight: 500;
+    color: #3e3e3e;
+    font-size: 12px;
+    margin-bottom: 30px;
+    background-color: #fff;
+
+    box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.05);
+    border-radius: 10px;
+  }
+  .news_blog__titles h3 {
+    font-size: 18px;
+  }
 }
