--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,25 @@ code {
     monospace;
 }
 
+body::-webkit-scrollbar {
+  width: 8px;
+  background-color: rgb(255, 255, 255);
+}
+body::-webkit-scrollbar-thumb {
+  width: 5px;
+  /* border-radius: 5px; */
+  background: linear-gradient(
+    90deg,
+    rgba(255, 72, 72, 1) 0%,
+    rgba(206, 53, 53, 1) 61%,
+    rgba(170, 39, 75, 1) 100%
+  );
+}
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+  /* border-radius: 10px; */
+  background-color: #f9f9fd;
+}
 input[type="radio"] {
   -webkit-appearance: none;
   appearance: none;
@@ -45,4 +64,27 @@ input[type="radio"]::before {
 
 input[type="radio"]:checked::before {
   transform: scale(1);
+}
+
+input[type="text"],
+input[type="number"],
+input[type="email"],
+input[type="search"] {
+  padding-left: 10px;
+  font-size: 14px;
+  font-family: Geometria;
+  font-weight: 500;
+  color: #2e2d2d;
+}
+
+textarea {
+  padding: 10px;
+  font-size: 14px;
+  font-family: Geometria;
+  font-weight: 500;
+  color: #2e2d2d;
+  width: 100%;
+  height: 100%;
+  border-style: none;
+  box-shadow: inset 0px 0px 4px rgb(0 0 0 / 25%);
 }
