--- a/src/pages/Checkout/Checkout.css
+++ b/src/pages/Checkout/Checkout.css
@@ -106,3 +106,16 @@
   box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.05);
   border-radius: 10px;
 }
+
+.checkout__textArea-p {
+  height: 100px;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+/* *********************************  max-width: 1200px  *************************************** */
+@media (max-width: 1200px) {
+  .checkout {
+    margin: 0 auto;
+  }
+}
