--- a/src/pages/Compare/Compare.css
+++ b/src/pages/Compare/Compare.css
@@ -1,5 +1,7 @@
 .compare__container {
-  padding: 80px 120px 130px 120px;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 150px 120px 130px 120px;
 }
 
 /* .categoriesPage__title {
@@ -14,6 +16,7 @@
 } */
 .compare__title h2 {
   text-align: center;
+  margin-bottom: 30px;
 }
 .compare__title h2 span {
   font-size: 24px;
@@ -77,7 +80,7 @@
 }
 .compare__content {
   display: flex;
-  filter: drop-shadow(0px 10px 16px rgba(0, 0, 0, 0.05));
+  /* filter: drop-shadow(0px 10px 16px rgba(0, 0, 0, 0.05)); */
 }
 .compare__products {
   display: flex;
@@ -177,4 +180,64 @@
     rgba(170, 39, 39, 1) 100%
   );
   margin-right: 12px;
+}
+
+/* *********************************  MEDIA QUERY  *************************************** */
+/* *********************************  max-width: 1400px  *************************************** */
+@media (max-width: 1400px) {
+  .compare__container {
+    padding: 150px 50px 80px 50px;
+  }
+}
+
+/* *********************************  max-width: 1200px  *************************************** */
+@media (max-width: 1200px) {
+  .compare__content {
+    overflow: auto;
+    padding-bottom: 20px;
+  }
+}
+
+/* *********************************  max-width: 992px  *************************************** */
+@media (max-width: 992px) {
+  .compare__container {
+    padding: 150px 30px 80px 30px;
+  }
+}
+/* *********************************  max-width: 768px  *************************************** */
+@media (max-width: 768px) {
+  .compare__container {
+    padding: 150px 20px 80px 20px;
+  }
+  .compare__item--card:first-child {
+    height: 230px;
+  }
+  .compare__item--card {
+    padding: 10px;
+  }
+  .compare__item:first-child .compare__item--card {
+    font-size: 12px;
+  }
+  .compare__item--field {
+    padding: 10px;
+    font-size: 12px;
+  }
+  .compare__img {
+    width: 150px;
+  }
+}
+/* *********************************  max-width: 575px  *************************************** */
+@media (max-width: 575px) {
+  .compare__title h2 span {
+    font-size: 18px;
+  }
+  .compare__item--card:first-child {
+    height: 210px;
+  }
+  .compare__name {
+    font-size: 12px;
+  }
+  .compare__price span {
+    font-size: 14px;
+  }
 }
