--- a/src/pages/ProductPage/ProductPage.css
+++ b/src/pages/ProductPage/ProductPage.css
@@ -4,7 +4,9 @@
   color: #3f3d56;
 }
 .productPage__container {
-  padding: 30px 120px;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 150px 120px;
 }
 .productPage__path {
   font-size: 14px;
@@ -28,20 +30,29 @@
   display: flex;
 }
 .productPage__top--restImages {
+  width: 100px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+  margin-right: 15px;
 }
-.productPage__top--restImages div {
+.productPage__top--restImages >div {
+  height: 95%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.productPage__top--restImages .restimage {
   width: 55px;
   height: 55px;
-  margin-right: 30px;
+  /* margin-right: 30px; */
+  margin: 0 auto;
 }
 
-.productPage__top--restImages div img {
+.productPage__top--restImages .restimage img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -176,11 +187,29 @@
 .productPage__top-addCart span {
   margin-left: 15px;
 }
-
+.productPage__top-addCart:hover {
+  background: linear-gradient(
+    90deg,
+    rgb(218, 38, 38) 0%,
+    rgb(139, 25, 25) 61%,
+    rgb(131, 17, 47) 100%
+  );
+  transition: all 0.3s linear;
+}
+.productPage__top-addCart:active {
+  border: 1px solid rgb(0, 0, 0);
+}
 .productPage__top-compareBtn {
   border: 1px solid #aa2727;
   border-radius: 10px;
   padding: 3px 5px 1px;
+}
+.productPage__top-compareBtn:hover {
+  border: 1px solid #5f0d0d;
+  transition: all 0.3s linear;
+}
+.productPage__top-compareBtn:active {
+  border: 1px solid #8f7979;
 }
 
 .productPage__top--contact {
@@ -239,6 +268,12 @@
   background-color: #12d61a;
   font-weight: 700;
   border-radius: 10px;
+  transition: all 0.4s linear;
+  cursor: pointer;
+}
+.productPage__top--contactButton button:hover {
+  background-color: #019206;
+  transition: all 0.3s linear;
 }
 /* ***************************************************************************************** */
 
@@ -346,4 +381,273 @@
 }
 .productPage__reviews--date {
   color: #878787;
+}
+
+/* *********************************  MEDIA QUERY  *************************************** */
+
+/* *********************************  max-width: 1400px  *************************************** */
+@media (max-width: 1400px) {
+  .productPage__container {
+    padding: 150px 50px 80px 50px;
+  }
+}
+/* *********************************  max-width: 1200px  *************************************** */
+
+@media (max-width: 1200px) {
+  .productPage__top {
+    flex-direction: column;
+  }
+  .productPage__top--data {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .productPage__top--contact {
+    width: 50%;
+    margin: 30px auto;
+  }
+  .productPage__bottom .kits__content {
+    justify-content: space-around;
+  }
+}
+
+/* *********************************  max-width: 992px  *************************************** */
+
+@media (max-width: 992px) {
+  .productPage__top--data {
+    width: 95%;
+    pad: 10px;
+  }
+  .productPage__top--title {
+    font-size: 18px;
+  }
+  .productPage__top--price span {
+    font-size: 24px;
+  }
+  .productPage__top-addCart {
+    padding: 8px 15px;
+  }
+  .productPage__top--mainImage div {
+    height: 330px;
+  }
+  .productPage__top--restImages .restimage {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+.productPage__top--data.mobile {
+  display: none;
+}
+
+/* *********************************  max-width: 768px  *************************************** */
+
+@media (max-width: 768px) {
+  .productPage__container {
+    padding: 150px 20px 80px 20px;
+  }
+  .productPage__top--data.desktop {
+    display: none;
+  }
+  .productPage__top--data.mobile {
+    display: flex;
+  }
+  .productPage__top--data-left {
+    flex-direction: column;
+    width: 44%;
+  }
+  .productPage__top--mainImage div {
+    width: 100%;
+    height: 300px;
+    margin-bottom: 15px;
+  }
+  .productPage__top--mainImage {
+    font-size: 10px;
+    margin-bottom: 15px;
+  }
+
+  .productPage__top--restImages {
+    flex-direction: row;
+    justify-content: start;
+  }
+  .productPage__top--restImages > div {
+    flex-direction: row;
+    margin-bottom: 0;
+  }
+  .productPage__top--restImages .restimage img {
+    margin-bottom: 0;
+  }
+  .productPage__top--restImages .restimage {
+    margin-right: 15px;
+  }
+  .productPage__top--restImages span {
+    transform: rotate(270deg);
+  }
+  .productPage__top--restImages span img {
+    display: block;
+    width: 30px;
+    height: 30px;
+  }
+  .productPage__top--data-right .mid {
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .productPage__top--title {
+    font-size: 14px;
+  }
+  .productPage__top--price {
+    text-align: left;
+    margin: 15px 5px 20px 0;
+  }
+  .productPage__top--price span {
+    font-size: 16px;
+  }
+  .productPage__top--availibility {
+    font-size: 10px;
+  }
+  .productPage__top--availibility span {
+    font-size: 10px;
+  }
+  .productPage__top--additionalInfo {
+    font-size: 10px;
+  }
+  .productPage__top--deliveryInfo {
+    font-size: 10px;
+  }
+
+  .productPage__top--cartButtons {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+/* .productPage__top--mainImage div {
+    width: 200px;
+    height: 300px;
+  }
+ */
+
+/* *********************************  max-width: 575px  *************************************** */
+.productPage__bottom--toggles.mobile {
+  display: none;
+}
+@media (max-width: 575px) {
+  .productPage__container {
+    padding: 150px 5px 40px 5px;
+  }
+  .productPage__path {
+    font-size: 12px;
+  }
+  .productPage__top--data {
+    padding: 5px;
+  }
+  .productPage__top--mainImage {
+    font-size: 8px;
+  }
+  .productPage__top--mainImage div {
+    height: 200px;
+  }
+  .productPage__top--restImages .restimage {
+    width: 30px;
+    height: 30px;
+    margin-right: 5px;
+  }
+  .productPage__top--restImages .restimage img {
+    border-radius: 5px;
+  }
+  .productPage__top--restImages span img {
+    width: 20px;
+    height: 20px;
+  }
+  .productPage__top--data-right .mid {
+    height: 200px;
+  }
+  .productPage__top--title {
+    font-size: 12px;
+  }
+  .productPage__top--price span {
+    font-size: 14px;
+  }
+  .productPage__top--availibility {
+    font-size: 9px;
+  }
+  .productPage__top--availibility span {
+    font-size: 9px;
+  }
+  .productPage__top--additionalInfo {
+    font-size: 9px;
+  }
+  .productPage__top--deliveryInfo {
+    font-size: 9px;
+  }
+  .productPage__top--counter {
+    width: 50px;
+  }
+
+  .productPage__top-addCart {
+    font-size: 12px;
+    padding: 8px 15px;
+  }
+
+  .productPage__top--contact {
+    width: 70%;
+  }
+  .productPage__top--contactTitle {
+    font-size: 14px;
+  }
+  .productPage__top--contactInfo ul li {
+    font-size: 12px;
+  }
+  .productPage__top--contact > div span {
+    font-size: 12px;
+  }
+  .productPage__top--contactChat p {
+    font-size: 12px;
+  }
+
+  .productPage__bottom--toggles.desktop {
+    display: none;
+  }
+  .productPage__bottom--toggles.mobile {
+    display: block;
+    text-align: center;
+  }
+
+  .productPage__bottom--content {
+    padding: 5px;
+  }
+  .productPage__description {
+    font-size: 12px;
+  }
+  .productPage__description span {
+    margin: 20px 0;
+  }
+  .productPage__description ul {
+    margin-bottom: 40px;
+  }
+}
+
+/* *********************************  max-width: 450px  *************************************** */
+
+@media (max-width: 450px) {
+  .productPage__top-addCart {
+    font-size: 10px;
+    padding: 4px 3px;
+  }
+
+  .productPage__top--contactButton button {
+    padding: 10px 20px;
+    font-size: 12px;
+  }
+  .productPage__top--contactImg {
+    width: 70px;
+    height: 70px;
+    margin: 0 auto;
+  }
+  .productPage__top--contactImg img {
+    width: 100%;
+  }
 }
