--- a/src/pages/CategoriesPage/CategoriesPage.css
+++ b/src/pages/CategoriesPage/CategoriesPage.css
@@ -1,5 +1,6 @@
 .categoriesPage__container {
   max-width: 1440px;
+  margin: 0 auto;
   padding: 150px 120px 130px 120px;
 }
 
@@ -179,7 +180,6 @@
 	  
   } */
 }
-
 
 /* *********************************  max-width: 992px  *************************************** */
 @media (max-width: 992px) {
