--- a/src/pages/Compare/Compare.css
+++ b/src/pages/Compare/Compare.css
@@ -246,3 +246,24 @@
     font-size: 14px;
   }
 }
+
+/* ///////////////////////////////////////////////// */
+
+.compare__content::-webkit-scrollbar {
+  width: 2px;
+}
+
+.compare__content::-webkit-scrollbar-track {
+  background: #dddbdb;
+  width: 2px;
+}
+
+.compare__content::-webkit-scrollbar-thumb {
+  background: linear-gradient(
+    90deg,
+    rgba(255, 72, 72, 1) 0%,
+    rgba(206, 53, 53, 1) 61%,
+    rgba(170, 39, 75, 1) 100%
+  );
+  width: 2px;
+}
