--- a/src/components/Main/Logo/Logo.css
+++ b/src/components/Main/Logo/Logo.css
@@ -14,6 +14,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 10px 0;
 }
 .logo__items {
   /* width: 150px; */
@@ -39,4 +40,10 @@
   .logo__container {
     padding: 0px 50px;
   }
+}
+
+.swiper-wrapper {
+  display: flex;
+  align-items: center;
+  padding: 10px 0;
 }
