--- a/src/pages/NewsDetail/NewsDetail.css
+++ b/src/pages/NewsDetail/NewsDetail.css
@@ -1,16 +1,16 @@
-.delivery {
+.newsDetail {
 }
-.delivery__container {
+.newsDetail__container {
   padding: 100px 120px 80px;
   max-width: 1440px;
   margin: 0 auto;
 }
-.delivery__title {
+.newsDetail__title {
   margin: 70px 0 35px;
   text-align: left;
 }
 
-.delivery__title span {
+.newsDetail__title span {
   color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
@@ -24,46 +24,45 @@
   font-weight: 700;
   font-size: 40px;
 }
-.delivery__content {
+.newsDetail__content {
   width: 100%;
   display: flex;
   justify-content: space-between;
 }
-.delivery__left {
+.newsDetail__left {
   width: 50%;
   padding: 30px;
   background-color: #fff;
   box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.05);
   border-radius: 10px;
 }
-.delivery__text p {
-  margin-bottom: 15px;
+.newsDetail__text {
   font-family: Geometria;
   font-weight: 500;
   color: #3e3e3e;
   line-height: 25px;
 }
-.delivery__text ul {
+.newsDetail__text ul {
   margin-bottom: 40px;
 }
-.delivery__text ul li {
+.newsDetail__text ul li {
   font-family: Geometria;
   font-weight: 500;
   color: #3e3e3e;
 }
-.delivery__text ul li span {
+.newsDetail__text ul li span {
   margin-right: 15px;
 }
-.delivery__right {
+.newsDetail__right {
   width: 48%;
   display: flex;
   justify-content: flex-end;
 }
-.delivery__right--img {
+.newsDetail__right--img {
   width: 100%;
   height: 300px;
 }
-.delivery__right--img img {
+.newsDetail__right--img img {
   width: 100%;
   height: 100%;
   object-fit: contain;
@@ -71,25 +70,25 @@
 /* *********************************  MEDIA QUERY  *************************************** */
 /* *********************************  max-width: 1400px  *************************************** */
 @media (max-width: 1400px) {
-  .delivery__container {
+  .newsDetail__container {
     padding: 100px 50px 80px;
   }
 }
 
 /* *********************************  max-width: 1200px  *************************************** */
 @media (max-width: 1200px) {
-  .delivery__content {
+  .newsDetail__content {
     flex-direction: column;
   }
-  .delivery__title {
+  .newsDetail__title {
     text-align: center;
   }
 
-  .delivery__left {
+  .newsDetail__left {
     width: 70%;
     margin: 0 auto 30px;
   }
-  .delivery__right {
+  .newsDetail__right {
     width: 50%;
     margin: 0 auto;
   }
@@ -98,13 +97,13 @@
 /* *********************************  max-width: 768px  *************************************** */
 
 @media (max-width: 768px) {
-  .delivery__container {
+  .newsDetail__container {
     padding: 100px 20px 80px;
   }
-  .delivery__left {
+  .newsDetail__left {
     width: 100%;
   }
-  .delivery__title span {
+  .newsDetail__title span {
     font-size: 24px;
   }
 }
@@ -112,10 +111,10 @@
 /* *********************************  max-width: 575px  *************************************** */
 
 @media (max-width: 575px) {
-  .delivery__left {
+  .newsDetail__left {
     padding: 10px;
   }
-  .delivery__text {
+  .newsDetail__text {
     font-size: 12px;
   }
 }
