--- a/src/components/Main/Banner/Banner.css
+++ b/src/components/Main/Banner/Banner.css
@@ -37,6 +37,7 @@
   /* max-width: 790px;
   width: 65%;
    */
+  width: 100%;
   height: 375px;
   position: relative;
 }
@@ -44,7 +45,7 @@
   /* position: absolute; */
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 .banner__btn {
   /* height: 100%; */
@@ -65,6 +66,8 @@
   /* margin-top: 60px; */
   border-radius: 10px;
   z-index: 20;
+
+  cursor: pointer;
 }
 
 .banner__right {
@@ -107,6 +110,7 @@
   /* margin-top: 60px; */
   border-radius: 10px;
   z-index: 20;
+  cursor: pointer;
 }
 
 .banner__right--bottom {
