--- a/src/components/Main/Logo/Logo.css
+++ b/src/components/Main/Logo/Logo.css
@@ -20,7 +20,7 @@
   /* width: 150px; */
 }
 .logo__img {
-  max-width: 170px;
+  max-width: 120px;
 }
 .logo__img img {
   width: 100%;
@@ -42,7 +42,7 @@
   }
 }
 
-.swiper-wrapper {
+.logo .swiper-wrapper {
   display: flex;
   align-items: center;
   padding: 10px 0;
