--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -222,6 +222,28 @@
   margin-top: 30px;
 }
 
+.cart__empty h2 {
+  text-align: center;
+}
+.cart__empty h2 span {
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 72, 72, 1) 0%,
+    rgba(170, 39, 39, 1) 100%
+  );
+  font-size: 28px;
+}
+.cart__empty--img {
+  max-width: 200px;
+  margin: 20px auto;
+}
+.cart__empty--img img {
+  width: 100%;
+}
+
 /* *********************************  MEDIA QUERY  *************************************** */
 
 /* *********************************  max-width: 1400px  *************************************** */
