--- a/src/pages/ProductPage/ProductPage.css
+++ b/src/pages/ProductPage/ProductPage.css
@@ -37,7 +37,7 @@
   align-items: center;
   margin-right: 15px;
 }
-.productPage__top--restImages >div {
+.productPage__top--restImages > div {
   height: 95%;
   display: flex;
   flex-direction: column;
@@ -50,6 +50,7 @@
   height: 55px;
   /* margin-right: 30px; */
   margin: 0 auto;
+  cursor: pointer;
 }
 
 .productPage__top--restImages .restimage img {
