--- a/src/components/Main/Banner/Banner.css
+++ b/src/components/Main/Banner/Banner.css
@@ -92,7 +92,7 @@
   /* position: absolute; */
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 .banner__btn--right {
   padding: 20px;
