--- a/src/components/Main/Banner/Banner.css
+++ b/src/components/Main/Banner/Banner.css
@@ -45,7 +45,7 @@
   /* position: absolute; */
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
 .banner__btn {
   /* height: 100%; */
