--- a/src/pages/NewsDetail/NewsDetail.css
+++ b/src/pages/NewsDetail/NewsDetail.css
@@ -7,7 +7,7 @@
 }
 .newsDetail__title {
   margin: 70px 0 35px;
-  text-align: left;
+  text-align: center;
 }
 
 .newsDetail__title span {
@@ -22,7 +22,7 @@
 
   font-family: Geometria;
   font-weight: 700;
-  font-size: 40px;
+  font-size: 24px;
 }
 .newsDetail__content {
   width: 100%;
