--- a/src/components/Main/Products/Products.css
+++ b/src/components/Main/Products/Products.css
@@ -94,6 +94,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .product__item--content {
@@ -233,6 +235,11 @@
   background: #ffffff;
   box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
+}
+
+.loading--block {
+  text-align: center;
+  margin: 20px 0;
 }
 
 /* *********************************  MEDIA QUERY  ************************************* */
